fix db connection and swagger generated
